Refactor onboarding process and implement dynamic course table
This commit includes significant updates to the onboarding process:

- Implement dynamic table initialization for both online and offline courses
- Add toggle functionality for users with verified attendance to switch between online and offline courses
- Refactor DataTable initialization to handle different structures for online and offline courses
- Improve error handling and add detailed logging throughout the script
- Enhance table responsiveness and remove horizontal scrollbar
- Implement course selection functionality with real-time summary display
- Add initial validation for online course enrollment (hours and domain conflicts)
- Improve overall code structure and readability
- Remove manual table structure creation and footer to resolve conflicts
- Adjust DataTable options for better performance and user experience

TODO: Implement offline course enrollment logic

--- a/public/onboarding.html
+++ b/public/onboarding.html
@@ -17,22 +17,77 @@
 	   <link href="./vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
       <link href="./css/style.css" rel="stylesheet">
       <link href="./css/onboarding.style.css" rel="stylesheet">
-      <style>.summary-table {
-         border-collapse: collapse;
-         width: 100%;
-         margin-bottom: 20px;
-       }
-       
-       .summary-table th,
-       .summary-table td {
-         padding: 8px;
-         text-align: left;
-         border: 1px solid #ddd;
-       }
-       
-       .summary-table th {
-         background-color: #f2f2f2;
-       }</style>
+      <style>
+         .card-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+         }
+
+         .toggle-container {
+            display: flex;
+            align-items: center;
+         }
+         .switch {
+           position: relative;
+           display: inline-block;
+           width: 60px;
+           height: 34px;
+           margin: 0 10px;
+         }
+         .switch input {
+           opacity: 0;
+           width: 0;
+           height: 0;
+         }
+         .slider {
+           position: absolute;
+           cursor: pointer;
+           top: 0;
+           left: 0;
+           right: 0;
+           bottom: 0;
+           background-color: #ccc;
+           transition: .4s;
+         }
+         .slider:before {
+           position: absolute;
+           content: "";
+           height: 26px;
+           width: 26px;
+           left: 4px;
+           bottom: 4px;
+           background-color: white;
+           transition: .4s;
+         }
+         input:checked + .slider {
+           background-color: #2196F3;
+         }
+         input:checked + .slider:before {
+           transform: translateX(26px);
+         }
+         .slider.round {
+           border-radius: 34px;
+         }
+         .slider.round:before {
+           border-radius: 50%;
+         }
+         .summary-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+         }
+         .summary-table th,
+         .summary-table td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+         }
+
+         .summary-table th {
+            background-color: #f2f2f2;
+         }
+      </style>
    </head>
    <body>
       <!--*******************
@@ -117,7 +172,6 @@
          ***********************************-->
       <div class="content-body">
          <div class="container-fluid">
-            <!-- row -->
             <div class="row">
                <div class="col-xl-12 col-xxl-12">
                   <div class="card">
@@ -194,9 +248,16 @@
                                        <div class="row">
                                           <div class="col-12">
                                               <div class="card">
-                                                  <div class="card-header">
-                                                      <h4 class="card-title">OET Online Course Selection</h4>
-                                                  </div>
+                                                <div class="card-header d-flex justify-content-between align-items-center">
+                                                   <h4 class="card-title">OET Course Selection</h4>
+                                                   <div class="toggle-container">
+                                                       <span>Online: </span>
+                                                       <label class="switch">
+                                                           <input type="checkbox" id="OETCoursesTableToggle">
+                                                           <span class="slider round"></span>
+                                                       </label>
+                                                   </div>
+                                               </div>
                                              <div class="card-body">
                                                 <div class="table-responsive">
                                                    <table id="OETCoursesTable" class="display" style="width:100%">
@@ -237,9 +298,16 @@
                                        <div class="row">
                                           <div class="col-12">
                                               <div class="card">
-                                                  <div class="card-header">
-                                                      <h4 class="card-title">OEHM Online Course Selection</h4>
-                                                  </div>
+                                                <div class="card-header d-flex justify-content-between align-items-center">
+                                                   <h4 class="card-title">OEHM Course Selection</h4>
+                                                   <div class="toggle-container">
+                                                       <span>Online: </span>
+                                                       <label class="switch">
+                                                           <input type="checkbox" id="OEHMCoursesTableToggle">
+                                                           <span class="slider round"></span>
+                                                       </label>
+                                                   </div>
+                                               </div>
                                              <div class="card-body">
                                                 <div class="table-responsive">
                                                    <table id="OEHMCoursesTable" class="display" style="width:100%">
@@ -294,9 +362,6 @@
       </div>
    </div>   
       <!--**********************************
-         Main wrapper end
-         ***********************************-->
-      <!--**********************************
          Scripts
          ***********************************-->
       <!-- Required vendors -->
@@ -306,7 +371,7 @@
       <script src="./js/custom.js"></script>
       <script src="./js/dlabnav-init.js"></script>
       <script src="./vendor/jquery-smartwizard/dist/js/jquery.Wizard.js"></script>
-         <!-- Datatable -->
+      <!-- Datatable -->
       <script src="./vendor/datatables/js/jquery.dataTables.min.js"></script>
       <script src="./js/plugins-init/datatables.init.js"></script>
       <script src="vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
