--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,21 @@
       <link href="./vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
       <link href="./vendor/bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
       <link href="./css/style.css" rel="stylesheet">
+      <style>
+         #newProgressChart {
+             width: 100%;
+             max-width: 250px;
+             margin: 0 auto;
+         }
+         .redial-content {
+             text-align: center;
+             margin-top: 20px;
+         }
+         /* Hide the old progress bar */
+         #redial {
+             display: none !important;
+         }
+      </style>
    </head>
    <body>
       <!--*******************
@@ -227,7 +242,7 @@
                                           </svg>
                                        </span>
                                        <div class="ms-2">
-                                          <h4 class="mb-0">12</h4>
+                                          <h4 class="mb-0">0</h4>
                                           <span>Completed Courses</span>
                                        </div>
                                     </div>
@@ -303,14 +318,16 @@
                         <div class="col-xl-4 col-lg-6">
                            <div class="card">
                               <div class="card-body pt-3">
-                                 <div id="redial"></div>
-                                 <div class="redial-content">
-                                    <h4>Progress</h4>
-                                    <p>4 of your enrolled courses are due for submission.</p>
-                                    <a href="course-details-2.html" class="btn btn-primary">My Submissions</a>
-                                 </div>
+                                  <div id="newProgressChart"></div>
+                                  <div class="redial-content">
+                                      <h4>Progress</h4>
+                                      <p id="progressText"></p>
+                                      <a href="course-details-2.html" class="btn btn-primary">My Submissions</a>
+                                      <br>
+                                      <br>
+                                  </div>
                               </div>
-                           </div>
+                          </div>
                         </div>
                         <div class="col-xl-8 col-lg-6">
                            <div class="card">
@@ -349,9 +366,10 @@
       <script src="./vendor/global/global.min.js"></script>
       <script src="./vendor/chart.js/Chart.bundle.min.js"></script>
       <script src="./vendor/jquery-nice-select/js/jquery.nice-select.min.js"></script>
-      <script src="./vendor/apexchart/apexchart.js"></script>
       <script src="./vendor/bootstrap-datetimepicker/js/moment.js"></script>
       <script src="./vendor/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+      <script src="./vendor/apexchart/apexchart.js"></script>
+      <script src="./vendor/global/dashboard.js"></script>
       <script src="./js/dashboard/dashboard-1.js"></script>
       <script src="./js/custom.js"></script>
       <script src="./js/dlabnav-init.js"></script>
