--- a/public/login.html
+++ b/public/login.html
@@ -25,7 +25,7 @@
                      <div class="row m-0">
                         <div class="col-xl-6 col-md-6 sign text-center">
                            <div>
-                              <img src="https://myaccount.somaiya.edu/img/BG-login.jpg" class="education-img" width="100%" height="100%"></img>
+                              <img src="/images/BG-login.jpg" class="education-img" width="100%" height="100%"></img>
                            </div>
                         </div>
                         <div class="col-xl-6 col-md-6">
