Fix profile page data display and streamline API interactions
Refactor profile page JavaScript to correctly fetch and display user data, courses, and total learning hours. Remove references to non-existent endpoints and improve error handling. Streamline data flow and update DOM elements more robustly to prevent errors from missing elements. This update ensures proper display of user details, course information, and learning statistics.

--- a/public/login.html
+++ b/public/login.html
@@ -35,7 +35,7 @@
                               <div class="login-social">
                                  <a href="/auth/google" class="btn font-w800 d-block my-4"><i class="fab fa-google me-2 text-primary"></i>Login with Google</a>
                               </div>
-                              <form action="index.html">
+                              <form action="/">
                                  <div class="mb-3">
                                     <label class="mb-1"><strong>Email</strong></label>
                                     <input type="email" class="form-control" value="SVV Net ID">
