Refactor profile page layout for better responsiveness
Implemented comprehensive updates to the profile page, focusing on improved user experience and data presentation:

Refactor course card layout for better responsiveness
Add truncation for long course names with tooltip for full name
Ensure consistent display of course type and mode badges
Capitalize mode display (online/offline) for improved readability
Optimize API calls to fetch and display both online and offline courses
Implement responsive design for stat cards on various screen sizes
Fix issues with data fetching and display from multiple course tables
Enhance overall visual consistency and information hierarchy

These changes significantly improve the profile page's functionality and appearance, providing a more intuitive and informative user interface.

--- a/public/index.html
+++ b/public/index.html
@@ -279,26 +279,49 @@
                            </div>
                         </div>
                         <div class="col-xl-12 col-xxl-6">
-                           <div class="card score-active">
-                              <div class="card-header border-0 flex-wrap">
-                                 <h4>Learning Activity</h4>
-                                 <ul class="d-flex">
-                                    <li>
-                                       <svg class="me-2" width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                          <rect x="1.5" y="1.5" width="9" height="9" rx="4.5" fill="white" stroke="var(--primary)" stroke-width="3"/>
-                                       </svg>
-                                       Last Month
-                                    </li>
-                                    <li>
-                                       <svg class="me-2" width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                          <rect x="1.5" y="1.5" width="9" height="9" rx="4.5" fill="white" stroke="var(--secondary)" stroke-width="3"/>
-                                       </svg>
-                                       Last Month
-                                    </li>
-                                 </ul>
+                           <div class="card">
+                              <div class="card-header border-0 pb-0">
+                                 <h4>Upcoming Submissions</h4>
                               </div>
-                              <div class="card-body pb-1 custome-tooltip style-1 py-0 ">
-                                 <div id="activity"></div>
+                              <div class="card-body pt-0">
+                                 <div class="card-schedule">
+                                    <span class="side-label bg-primary"></span>
+                                    <div class="up-comming-schedule style-1">
+                                       <div class="date-box">
+                                          <span>5 </span>
+                                          <span>jan</span>
+                                       </div>
+                                       <div class="flex-1">
+                                          <h4 class="mb-0"><a href="javascript:void(0);">UX Research</a></h4>
+                                          <svg class="me-1" width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                             <path d="M13 2.73499H12.255V2.25C12.255 1.83999 11.92 1.5 11.505 1.5C11.09 1.5 10.755 1.83999 10.755 2.25V2.73499H8.75V2.25C8.75 1.83999 8.41501 1.5 8 1.5C7.58499 1.5 7.25 1.83999 7.25 2.25V2.73499H5.245V2.25C5.245 1.83999 4.91001 1.5 4.495 1.5C4.07999 1.5 3.745 1.83999 3.745 2.25V2.73499H3C1.48498 2.73499 0.25 3.96499 0.25 5.48498V12.75C0.25 14.265 1.48498 15.5 3 15.5H13C14.515 15.5 15.75 14.265 15.75 12.75V5.48498C15.75 3.96499 14.515 2.73499 13 2.73499ZM14.25 6.31H1.75V5.48498C1.75 4.79498 2.31 4.23499 3 4.23499H3.745V4.69C3.745 5.10498 4.07999 5.44 4.495 5.44C4.91001 5.44 5.245 5.10498 5.245 4.69V4.23499H7.25V4.69C7.25 5.10498 7.58499 5.44 8 5.44C8.41501 5.44 8.75 5.10498 8.75 4.69V4.23499H10.755V4.69C10.755 5.10498 11.09 5.44 11.505 5.44C11.92 5.44 12.255 5.10498 12.255 4.69V4.23499H13C13.69 4.23499 14.25 4.79498 14.25 5.48498V6.31Z" fill="#c7c7c7"></path>
+                                          </svg>
+                                          <span>January 5, 2021</span>
+                                       </div>
+                                       <div>
+                                          <i class="las la-angle-right text-secondary"></i>
+                                       </div>
+                                    </div>
+                                 </div>
+                                 <div class="card-schedule">
+                                    <span class="side-label bg-warning"></span>
+                                    <div class="up-comming-schedule style-1">
+                                       <div class="date-box">
+                                          <span>5 </span>
+                                          <span>jan</span>
+                                       </div>
+                                       <div class="flex-1">
+                                          <h4 class="mb-0"><a href="javascript:void(0);">UX Research</a></h4>
+                                          <svg class="me-1" width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                             <path d="M13 2.73499H12.255V2.25C12.255 1.83999 11.92 1.5 11.505 1.5C11.09 1.5 10.755 1.83999 10.755 2.25V2.73499H8.75V2.25C8.75 1.83999 8.41501 1.5 8 1.5C7.58499 1.5 7.25 1.83999 7.25 2.25V2.73499H5.245V2.25C5.245 1.83999 4.91001 1.5 4.495 1.5C4.07999 1.5 3.745 1.83999 3.745 2.25V2.73499H3C1.48498 2.73499 0.25 3.96499 0.25 5.48498V12.75C0.25 14.265 1.48498 15.5 3 15.5H13C14.515 15.5 15.75 14.265 15.75 12.75V5.48498C15.75 3.96499 14.515 2.73499 13 2.73499ZM14.25 6.31H1.75V5.48498C1.75 4.79498 2.31 4.23499 3 4.23499H3.745V4.69C3.745 5.10498 4.07999 5.44 4.495 5.44C4.91001 5.44 5.245 5.10498 5.245 4.69V4.23499H7.25V4.69C7.25 5.10498 7.58499 5.44 8 5.44C8.41501 5.44 8.75 5.10498 8.75 4.69V4.23499H10.755V4.69C10.755 5.10498 11.09 5.44 11.505 5.44C11.92 5.44 12.255 5.10498 12.255 4.69V4.23499H13C13.69 4.23499 14.25 4.79498 14.25 5.48498V6.31Z" fill="#c7c7c7"></path>
+                                          </svg>
+                                          <span>January 5, 2021</span>
+                                       </div>
+                                       <div>
+                                          <i class="las la-angle-right text-secondary"></i>
+                                       </div>
+                                    </div>
+                                 </div>
                               </div>
                            </div>
                         </div>
