Implement re-onboarding feature with webhook integration
- Add webhook endpoint for triggering re-onboarding
- Implement in-memory storage for re-onboarding flags
- Update checkUserStatus middleware to handle re-onboarding
- Modify onboarding route to check re-onboarding status
- Update enrollment endpoint to clear re-onboarding flag
- Add semester-specific enrollment clearing in webhook handler
- Enhance error handling and logging throughout the process
- Update relevant routes to use new re-onboarding checks

This feature allows administrators to trigger re-onboarding for specific users,
clears current semester enrollments, and guides users through the re-onboarding
process without requiring database schema changes.

--- a/public/successful-onboarding.html
+++ b/public/successful-onboarding.html
@@ -116,7 +116,7 @@
                             <p>You will be informed once the reviewer approves your selected courses.</p>
                             <p>After approval, you can log in to your dashboard and start completing your selected courses.</p>
                             <br>
-                            <a href="/" class="btn btn-primary">Go to Dashboard</a>
+                            <a href="/logout" class="btn btn-primary">Logout</a>
                         </div>
                     </div>
                 </div>
