--- a/public/profile.html
+++ b/public/profile.html
@@ -1,34 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="keywords" content="" />
-    <meta name="author" content="" />
-    <meta name="robots" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <meta name="format-detection" content="telephone=no" />
-    <title>Profile | KJ Somaiya OET-OEHM Portal</title>
-    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
-    <link
-      href="./vendor/jquery-nice-select/css/nice-select.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link href="./css/profile.style.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="preloader">
-      <div class="lds-ripple">
-        <div></div>
-        <div></div>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="keywords" content="" />
+      <meta name="author" content="" />
+      <meta name="robots" content="" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="" />
+      <meta name="format-detection" content="telephone=no">
+      <title>Profile | KJ Somaiya OET-OEHM Portal</title>
+      <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
+      <link href="./vendor/jquery-nice-select/css/nice-select.css" rel="stylesheet">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link href="./css/profile.style.css" rel="stylesheet">
+   </head>
+   <body>
+      <div id="preloader">
+         <div class="lds-ripple">
+            <div></div>
+            <div></div>
+         </div>
       </div>
-    </div>
-    <div id="main-wrapper">
+<div id="main-wrapper">
       <div class="nav-header">
         <a href="/" class="brand-logo">
           <svg
@@ -56,7 +50,7 @@
             xmlns="http://www.w3.org/2000/svg"
             width="304"
             height="150"
-            viewBox="80 0 198 80"
+            viewBox="80 0 203 80"
           >
             <path
               fill="none"
@@ -82,118 +76,110 @@
           </div>
         </div>
       </div>
-      <div class="header">
-        <div class="header-content">
-          <nav class="navbar navbar-expand">
-            <div class="collapse navbar-collapse justify-content-between">
-              <div class="header-left">
-                <div class="dashboard_bar">Profile</div>
-              </div>
-              <div class="navbar-nav header-right">
-                <div class="nav-item d-flex align-items-center">
-                  <li class="nav-item dropdown header-profile">
-                    <!-- Set the profile picture URL as the src attribute -->
-                    <img
-                      id="profilePicture"
-                      src="images/profile/default-profile.jpg"
-                      width="20"
-                      alt=""
-                    />
+    <div class="header">
+            <div class="header-content">
+               <nav class="navbar navbar-expand">
+                  <div class="collapse navbar-collapse justify-content-between">
+                     <div class="header-left">
+                        <div class="dashboard_bar">
+                           Profile
+                        </div>
+                     </div>
+                     <div class="navbar-nav header-right">
+                        <div class="nav-item d-flex align-items-center">
+                              <li class="nav-item dropdown header-profile">
+                                    <!-- Set the profile picture URL as the src attribute -->
+                                    <img id="profilePicture" src="images/profile/default-profile.jpg" width="20" alt=""/>
+                                 </a>
+                              </li>
+                        </div>
+                     </div>
+                  </div>
+               </nav>
+            </div>
+         </div>
+    <div class="dlabnav">
+            <div class="dlabnav-scroll">
+               <ul class="metismenu" id="menu">
+                  <li>
+                     <a class="has-arrow " href="/" aria-expanded="false">
+                     <i class="bi bi-grid"></i>
+                     <span class="nav-text">Dashboard</span>
+                     </a>
                   </li>
-                </div>
+                  <li>
+                     <a href="/submissions" aria-expanded="false">
+                     <i class="bi bi-info-circle"></i>
+                     <span class="nav-text">Submissions</span>
+                     </a>
+                  </li>
+                  <li><a href="/profile" aria-expanded="false">
+                    <i class="bi bi-gear-wide"></i>
+                    <span class="nav-text">Profile</span>
+                    </a>
+                 </li>
+               </ul>
+              <div class="plus-box">
+                  <li><a href="/logout" class="btn btn-primary btn-sm" aria-expanded="false">
+                    <i class="bi bi-box-arrow-left"></i>
+                  <span class="nav-text">Logout</span>
+                  </a>
+                  </li>
               </div>
             </div>
-          </nav>
-        </div>
-      </div>
-      <div class="dlabnav">
-        <div class="dlabnav-scroll">
-          <ul class="metismenu" id="menu">
-            <li>
-              <a class="has-arrow" href="/" aria-expanded="false">
-                <i class="bi bi-grid"></i>
-                <span class="nav-text">Dashboard</span>
-              </a>
-            </li>
-            <li>
-              <a href="/submissions" aria-expanded="false">
-                <i class="bi bi-info-circle"></i>
-                <span class="nav-text">Submissions</span>
-              </a>
-            </li>
-            <li>
-              <a href="/profile" aria-expanded="false">
-                <i class="bi bi-gear-wide"></i>
-                <span class="nav-text">Profile</span>
-              </a>
-            </li>
-          </ul>
-          <div class="plus-box">
-            <li>
-              <a
-                href="/logout"
-                class="btn btn-primary btn-sm"
-                aria-expanded="false"
-              >
-                <i class="bi bi-box-arrow-left"></i>
-                <span class="nav-text">Logout</span>
-              </a>
-            </li>
-          </div>
-        </div>
-      </div>
-      <div class="content-body">
-        <div class="container">
-          <div class="profile-header">
-            <h1 id="userName">Loading...</h1>
-            <p id="userEmail">Loading...</p>
-            <p id="userDetails">Loading...</p>
-            <p>KJ Somaiya College Of Engineering</p>
-          </div>
-
-          <div class="profile-stats">
-            <div class="stat-card">
-              <h3 id="completedCourses">0</h3>
-              <p>Completed Courses</p>
-            </div>
-            <div class="stat-card">
-              <h3 id="enrolledCourses">0</h3>
-              <p>Enrolled Courses</p>
-            </div>
-            <div class="stat-card">
-              <h3 id="totalHours">0</h3>
-              <p>Total Learning Hours</p>
-            </div>
-          </div>
-
-          <div class="courses-section">
-            <h2>Current Semester</h2>
-            <div id="currentSemesterGrid" class="courses-grid"></div>
-          </div>
-
-          <div class="courses-section">
-            <h2>Previous Semesters</h2>
-            <div id="previousSemesterGrid" class="courses-grid"></div>
-          </div>
-        </div>
-      </div>
-      <div class="footer">
+         </div>
+		 <div class="content-body">
+				<div class="container">
+					<div class="profile-header">
+						<h1 id="userName">Loading...</h1>
+						<p id="userEmail">Loading...</p>
+						<p id="userDetails">Loading...</p>
+						<p>KJ Somaiya College Of Engineering</p>
+					</div>
+			
+					<div class="profile-stats">
+						<div class="stat-card">
+							<h3 id="completedCourses">0</h3>
+							<p>Completed Courses</p>
+						</div>
+						<div class="stat-card">
+							<h3 id="enrolledCourses">0</h3>
+							<p>Enrolled Courses</p>
+						</div>
+						<div class="stat-card">
+							<h3 id="totalHours">0</h3>
+							<p>Total Learning Hours</p>
+						</div>
+					</div>
+			
+					<div class="courses-section">
+						<h2>Current Semester</h2>
+						<div id="currentSemesterGrid" class="courses-grid"></div>
+					</div>
+			
+					<div class="courses-section">
+						<h2>Previous Semesters</h2>
+						<div id="previousSemesterGrid" class="courses-grid"></div>
+					</div>
+				</div>
+			</div>
+    <div class="footer">
         <div class="copyright">
-          <p>Copyright © KJ Somaiya College Of Engineering</p>
+           <p>Copyright © KJ Somaiya College Of Engineering</p>
         </div>
-      </div>
-    </div>
-    <!--**********************************
+     </div>
+</div>         
+      <!--**********************************
          Main wrapper end
          ***********************************-->
-    <!--**********************************
+      <!--**********************************
          Scripts
          ***********************************-->
-    <!-- Required vendors -->
-    <script src="./vendor/global/global.min.js"></script>
-    <script src="./vendor/global/profile.js"></script>
-    <script src="./js/custom.js"></script>
-    <script src="./js/dlabnav-init.js"></script>
-    <script src="./js/styleSwitcher.js"></script>
-  </body>
+      <!-- Required vendors -->
+      <script src="./vendor/global/global.min.js"></script>
+      <script src="./vendor/global/profile.js"></script>
+      <script src="./js/custom.js"></script>
+      <script src="./js/dlabnav-init.js"></script>
+      <script src="./js/styleSwitcher.js"></script>
+</body>
 </html>
