--- a/public/404.html
+++ b/public/404.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="keywords" content="" />
-      <meta name="author" content="" />
-      <meta name="robots" content="" />
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="" />
-      <meta name="format-detection" content="telephone=no">
-      <title>404 - Page Not Found | KJ Somaiya OET-OEHM Portal</title>
-      <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
-      <link href="./css/style.css" rel="stylesheet">
-   </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>404 - Page Not Found | KJ Somaiya OET-OEHM Portal</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
+    <link href="./css/style.css" rel="stylesheet" />
+  </head>
 
-<body class="vh-100">
+  <body class="vh-100">
     <div class="authincation h-100">
-        <div class="container h-100">
-            <div class="row justify-content-center h-100 align-items-center">
-                <div class="col-md-7">
-                    <div class="form-input-content text-center error-page">
-                        <h1 class="error-text fw-bold">404</h1>
-                        <h4><i class="fa fa-exclamation-triangle text-warning"></i> The page you were looking for is not found!</h4>
-                        <p>You may have mistyped the address or the page may have moved.</p>
-						<div>
-                            <a class="btn btn-primary" href="/">Back to Home</a>
-                        </div>
-                    </div>
-                </div>
+      <div class="container h-100">
+        <div class="row justify-content-center h-100 align-items-center">
+          <div class="col-md-7">
+            <div class="form-input-content text-center error-page">
+              <h1 class="error-text fw-bold">404</h1>
+              <h4>
+                <i class="fa fa-exclamation-triangle text-warning"></i> The page
+                you were looking for is not found!
+              </h4>
+              <p>
+                You may have mistyped the address or the page may have moved.
+              </p>
+              <div>
+                <a class="btn btn-primary" href="/">Back to Home</a>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
-<!--**********************************
+    <!--**********************************
 	Scripts
 ***********************************-->
-<!-- Required vendors -->
-<script src="./vendor/global/global.min.js"></script>
-<script src="./js/custom.js"></script>
-<script src="./js/dlabnav-init.js"></script>
-<script src="./js/styleSwitcher.js"></script>
-</body>
+    <!-- Required vendors -->
+    <script src="./vendor/global/global.min.js"></script>
+    <script src="./js/custom.js"></script>
+    <script src="./js/dlabnav-init.js"></script>
+    <script src="./js/styleSwitcher.js"></script>
+  </body>
 </html>
