refactor(emailService): improve email service reliability and resilience
The changes made to the `emailService.js` file aim to improve the reliability and resilience of the email service by implementing the following improvements:

1. Validate the required environment variables to ensure the necessary configuration is available.
2. Implement a template caching mechanism to improve the performance of rendering email templates.
3. Introduce a token refresh handling mechanism to automatically retrieve a new access token when the existing one expires.
4. Implement a retrying mechanism for email sending to handle temporary failures and improve overall reliability.

These changes will help ensure the email service is more robust and can better handle various error scenarios, providing a more reliable experience for the application's users.

--- a/public/successful-onboarding.html
+++ b/public/successful-onboarding.html
@@ -299,7 +299,7 @@
                 <div class="container-fluid">
                     <div class="row align-items-center justify-content-center">
                         <div class="col text-center">
-                            <h1 class="mb-4">Successful Onboarding</h1>
+                            <h1 class="mb-4">Onboarding Successful</h1>
                             <p>Your response has been recorded successfully.</p>
                             <p>You will be informed once the reviewer approves your selected courses.</p>
                             <p>After approval, you can log in to your dashboard and start completing your selected courses.</p>
