feat: Optimize MySQL connection pool, CSP and enhance session management
This commit introduces the following improvements:

1. Optimized the MySQL connection pool configuration by setting a `connectionLimit` of 20 and `queueLimit` of 0 to better handle concurrent requests.

2. Increased the `connectTimeout` to 10 seconds to allow more time for the database connection to be established.

3. Improved the in-memory session configuration by:

- Add a global error handler to the Express app that logs the error and redirects the user to the login page after destroying the session. This ensures a clean state if an error occurs.
- Setting a more secure session secret using the `SESSION_SECRET` environment variable.
- Enabling the `secure` cookie option when in production mode to ensure session cookies are only transmitted over HTTPS.
- Setting the `httpOnly` cookie option to prevent client-side scripts from accessing the session cookie.
- Increasing the session cookie's maximum age to 24 hours.

4. Integrated the Helmet middleware to enhance the application's security by configuring a Content Security Policy (CSP) that restricts the sources from which resources can be loaded.

5. Replaced the externally hosted Bootstrap CSS file with a locally included version to improve performance and reliability.

--- a/public/onboarding.html
+++ b/public/onboarding.html
@@ -7,10 +7,7 @@
     <title>Onboarding | KJ Somaiya OET-OEHM Portal</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
     <!-- Datatable -->
-    <link
-      href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css"
-      rel="stylesheet"
-    />
+    <link href="./css/jquery.dataTables.min.css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" />
     <link href="./css/onboarding.style.css" rel="stylesheet" />
   </head>
