--- a/public/profile.html
+++ b/public/profile.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Profile | KJ Somaiya OET-OEHM Portal</title>
     <link rel="shortcut icon" type="image/png" href="images/favicon.png" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="./css/bootstrap.min.css" rel="stylesheet" />
     <link href="./css/profile.style.css" rel="stylesheet" />
   </head>
   <body>
