--- a/public/login.html
+++ b/public/login.html
@@ -33,11 +33,11 @@
                               <form action="/">
                                  <div class="mb-3">
                                     <label class="mb-1"><strong>Email</strong></label>
-                                    <input type="email" class="form-control" value="SVV Net ID">
+                                    <input type="email" class="form-control" placeholder="SVV Net ID">
                                  </div>
                                  <div class="mb-3">
                                     <label class="mb-1"><strong>Password</strong></label>
-                                    <input type="password" class="form-control" value="Password">
+                                    <input type="password" class="form-control" placeholder="Password">
                                  </div>
                                  <div class="row d-flex justify-content-between mt-4 mb-2">
                                     <div class="mb-3">
