--- a/public/onboarding.html
+++ b/public/onboarding.html
@@ -10,11 +10,12 @@
     <link href="./css/jquery.dataTables.min.css" rel="stylesheet" />
     <link href="./css/style.css" rel="stylesheet" />
     <link href="./css/onboarding.style.css" rel="stylesheet" />
+    <link href="./vendor/toastr/css/toastr.min.css" rel="stylesheet" />
   </head>
   <body>
     <!--*******************
          Preloader start
-         ********************-->
+    ********************-->
     <div id="preloader">
       <div class="lds-ripple">
         <div></div>
@@ -23,14 +24,14 @@
     </div>
     <!--*******************
          Preloader end
-         ********************-->
+    ********************-->
     <!--**********************************
          Main wrapper start
-         ***********************************-->
+    ***********************************-->
     <div id="main-wrapper">
       <!--**********************************
          Nav header start
-         ***********************************-->
+      ***********************************-->
       <div class="nav-header">
         <a href="/" class="brand-logo">
           <svg
@@ -89,10 +90,10 @@
       </div>
       <!--**********************************
          Nav header end
-         ***********************************-->
+       ***********************************-->
       <!--**********************************
          Header start
-         ***********************************-->
+      ***********************************-->
       <div class="header">
         <div class="header-content">
           <nav class="navbar navbar-expand">
@@ -394,7 +395,7 @@
     </div>
     <!--**********************************
          Scripts
-         ***********************************-->
+    ***********************************-->
     <!-- Required vendors -->
     <script src="./vendor/global/global.min.js"></script>
     <script src="./js/custom.js"></script>
@@ -403,6 +404,7 @@
     <!-- Datatable -->
     <script src="./vendor/datatables/js/jquery.dataTables.min.js"></script>
     <script src="./js/styleSwitcher.js"></script>
+    <script src="./vendor/toastr/js/toastr.min.js"></script>
     <script src="./vendor/global/onboarding.handler.js"></script>
   </body>
 </html>
